# smart-sentence-splitter

./: .clinerules  .editorconfig  .gitignore  .pre-commit-config.yaml  .project-meta.json  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  pyproject.toml  subtitle-quality-fix-report.canvas.tsx
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-failure-handler.yml  doc-gate.yml  e2e.yml  lint.yml  pr-check.yml  publish.yml  test.yml
.ruff_cache/0.15.20/: 2515688804171142582  4606750026957507289  5676641105574245037  8952551411720793269  9529391507085680128
01-docs/: ARCH-002-tiers.md  ARCH-003-multilingual.md  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  INCIDENT_RESPONSE.md  PM-PRD-v0.4.md  PM-PRD-v0.6.md  PRD.md  QUALITY_GATES.md  ROLLBACK.md  TECH_DEBT.md  pyproject.toml
02-source/api/: cli.py  rest_api.py
02-source/core/: __init__.py
02-source/exporter/: __init__.py  prompt_engine.py  prompt_engine_client.py  subtitle_exporter.py
02-source/workbench/: app.py
04-tests/integration/: test_real_llm.py  test_v3.py
05-standards/: coding-standards.md
06-scripts/: benchmark.py  e2e_test_ui.py  run_workbench.sh  verify_prompt_engine_e2e.py
config/: splitter.yaml
docs/: AGENTS.md  ARCH-001-architecture.md  ARCH-002-tiers.md  ARCH-003-multilingual.md  ARCHITECTURE.md  BENCHMARK.md  DESIGN.md  FEATURE-LIST-2026-07-03.md  INCIDENT_RESPONSE.md  PM-PRD-ARCH-v0.7.md  PM-PRD-v0.2.md  PM-PRD-v0.3.md  PM-PRD-v0.4.md  PM-PRD-v0.6.md  PRD.md  QUALITY_GATES.md  ROLLBACK.md  TECH_DEBT.md  USAGE_GUIDE.md
examples/: end_to_end.py  manila_output.txt  run_manila_text.py  sample_en.txt  sample_zh.txt  sdk_usage.py  verify_ci.py  verify_end_to_end.py  verify_exporter.py  verify_length_strategy.py  verify_real_llm.py  verify_storyboard.py
references/: commits.md  quality-gates.md  testing.md
scripts/: build.sh  run_workbench.sh
src/: AGENTS.md
standards/: coding-standards.md
tests/: __init__.py
workbench/: app.py
(+110 files in other folders)
